DEBUG | Quite some debugging...